Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119515

QHelpEngineCore::setReadOnly does not close the connection

    XMLWordPrintable

Details

    • 585db2833 (dev)

    Description

      setReadOnly does not close the connection to the database which makes for example a case like this not working:

      setupData()
      setReadOnly(false)
      setupData()
      

      The second setupData() does nothing as there is a check like this where m_query already exists from the first call:

      bool QHelpCollectionHandler::openCollectionFile()
      {
      if (m_query)
      return true;
      

      Attachments

        For Gerrit Dashboard: QTBUG-119515
        # Subject Branch Project Status CR V

        Activity

          People

            jkobus Jarek Kobus
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes