QHelpEngineCore: Reinitialize on changing the read only mode

Fixes: QTBUG-119515
Change-Id: I3d80138ce9282594f7d68c440c4666a9e4896c37
Reviewed-by: Kai Köhne <kai.koehne@qt.io>